# kl3m-embedding-research

./: .gitignore  README.md  pyproject.toml
examples/: example_tokenizers.py
kl3m-001-32k/: README.md  tokenizer.json
kl3m-003-64k/: README.md  merges.txt  tokenizer_config.json  vocab.json
kl3m_embeddings/commands/: average_models.py  compare_layers.py  describe.py  print_layers.py  print_svds.py  resize_context.py
kl3m_embeddings/embeddings/: change_tokenizer.py  deepspeed_trainer.py  describe.py  expand_layers.py  trainer.py
kl3m_embeddings/embeddings/commands/: average_models.py  describe.py  print_svds.py  resize_context.py
kl3m_embeddings/embeddings/deberta/: train_deberta_deepspeed.py  train_deberta_single.py
kl3m_embeddings/embeddings/roberta/: matroyshka_roberta.py  train_roberta_deepspeed.py  train_roberta_single.py
kl3m_embeddings/embeddings/samples/: embedding.py
kl3m_embeddings/embeddings/stats/: svds.py
kl3m_embeddings/models/: deepspeed_trainer.py  samples.py  trainer.py
kl3m_embeddings/models/deberta/: matroyshka_deberta.py  train_deberta_muon_ddp.py  train_deberta_muon_single.py  train_deberta_single.py
kl3m_embeddings/models/modernbert/: train_modernbert_muon.py
kl3m_embeddings/models/roberta/: matroyshka_roberta.py  train_contrastive_roberta_single.py  train_roberta_dataset.py  train_roberta_ddp.py  train_roberta_muon_ddp.py  train_roberta_muon_single.py  train_roberta_single.py
kl3m_embeddings/optimizers/: muon_modified.py
kl3m_embeddings/schedulers/: exponential_warmup_cooldown.py  linear_warmup_cooldown.py
kl3m_embeddings/utils/: logger.py  models.py
models/kl3m-embedding-005/: config.json  training.json
models/kl3m-embedding-005-deepspeed-1/: config.json  training.json
models/kl3m-embedding-005-deepspeed-2/: config.json  training.json
models/kl3m-embedding-005-deepspeed-3/: config.json  training.json
scripts/: describe_tokenizers.py  run_mteb.py  upload_models.py  upload_tokenizers.py
