[project]
name = "kl3m-embedding-research"
version = "0.1.0"
description = "KL3M embedding model research"
authors = [{ name = "ALEA Institute", email = "hello@aleainstitute.ai" }]
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
license = "MIT"
keywords = [
    "alea",
    "kl3m",
    "embedding",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "torch>=2.5.1,<3",
    "transformers>=4.48.0",
    "alea-llm-client>=0.1.1,<0.2",
    "tokenizers>=0.20.0",
    "orjsonl>=1.0.0,<2",
    "deepspeed>=0.15.3,<0.16",
    "mpi4py>=4.0.1,<5",
    "matplotlib>=3.9.2,<4",
    "seaborn>=0.13.2,<0.14",
    "polars>=1.12.0,<2",
    "einops>=0.8.0,<0.9",
    "ipython>=8.29.0,<9",
    "openai>=1.60.1,<2",
    "accelerate>=1.3.0,<2",
    "wandb>=0.19.4,<0.20",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
    "datasets>=3.3.0",
]

[project.urls]
Homepage = "https://aleainstitute.ai/"
Repository = "https://github.com/alea-institute/kl3m-embedding-research"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pytest-asyncio>=0.23.8,<0.24",
    "pytest-benchmark>=4.0.0,<5",
    "pytest-cov>=5.0.0,<6",
    "pylint>=3.2.7,<4",
]

[tool.hatch.build.targets.sdist]
include = [
    "kl3m_embeddings",
    "kl3m_embeddings",
]
exclude = [
    "tests",
    "docs",
    "examples",
    "docker",
]

[tool.hatch.build.targets.wheel]
include = [
    "kl3m_embeddings",
    "kl3m_embeddings",
]
exclude = [
    "tests",
    "docs",
    "examples",
    "docker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint]
max-line-length = 120
disable = [
    "line-too-long",
    "too-few-public-methods",
    "no-self-argument",
    "cyclic-import"
]
extension-pkg-allow-list = ["lxml"]
ignore-patterns = ["test_.*?.py", "conftest.py"]

[tool.pylint.messages_control]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 25
min-public-methods = 0

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
addopts = "--cov=kl3m_embeddings --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.mypy]
ignore_missing_imports = true
